--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,19 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: "^9.0.0"
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.3.0
   firebase_analytics: ^8.1.2
   firebase_auth: ^2.0.0
-  cloud_firestore: ^2.3.0
+  firebase_core: ^1.3.0
+  fluttertoast: ^8.0.7
+  font_awesome_flutter: ^9.0.0
   google_sign_in: ^5.0.4
-  
-
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +38,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -55,13 +49,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
